--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon index.js"
   },
   "repository": {
-    "type": "module",
+    "type": "",
     "url": "API-telecom"
   },
   "author": "Irzunov",
