--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,12 @@
   "description": "Telecom-test",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix ../client",
+    "client:install": "npm install --prefix ../client",
+    "client:build": "npm run build --prefix ../client"
   },
   "repository": {
     "type": "",
@@ -15,11 +20,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^6.0.14",
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
-    "chalk": "^5.0.0"
+    "chalk": "^5.0.0",
+    "concurrently": "^6.4.0"
   }
 }
